cassandra.h

typedef enum { cass_false = 0, cass_true = 1 } cass_bool_t;
typedef float cass_float_t;
typedef double cass_double_t;
typedef __UINT8_TYPE__ cass_uint8_t;
typedef unsigned __INT8_TYPE__ cass_uint8_t;
typedef unsigned char cass_uint8_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef int cass_int32_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef __UINT64_TYPE__ cass_uint64_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef unsigned __INT64_TYPE__ cass_uint64_t;
typedef long long int cass_int64_t;
typedef unsigned long long int cass_uint64_t;
typedef long long cass_int64_t;
typedef unsigned long long cass_uint64_t;
typedef cass_uint8_t cass_byte_t;
typedef struct CassInet_ {
  cass_uint8_t address[CASS_INET_V6_LENGTH];
  cass_uint8_t address_length;
} CassInet;
typedef struct CassUuid_ {
  cass_uint64_t time_and_version;
  cass_uint64_t clock_seq_and_node;
} CassUuid;
typedef struct CassResult_ CassResult;
typedef struct CassErrorResult_ CassErrorResult;
typedef struct CassIterator_ CassIterator;
typedef struct CassRow_ CassRow;
typedef struct CassValue_ CassValue;
typedef struct CassDataType_ CassDataType;
typedef struct CassCollection_ CassCollection;
typedef struct CassTuple_ CassTuple;
typedef struct CassUserType_ CassUserType;
typedef struct CassSchemaMeta_ CassSchemaMeta;
typedef enum CassConsistency_ {
  CASS_CONSISTENCY_UNKNOWN      = 0xFFFF,
  CASS_CONSISTENCY_ANY          = 0x0000,
  CASS_CONSISTENCY_ONE          = 0x0001,
  CASS_CONSISTENCY_TWO          = 0x0002,
  CASS_CONSISTENCY_THREE        = 0x0003,
  CASS_CONSISTENCY_QUORUM       = 0x0004,
  CASS_CONSISTENCY_ALL          = 0x0005,
  CASS_CONSISTENCY_LOCAL_QUORUM = 0x0006,
  CASS_CONSISTENCY_EACH_QUORUM  = 0x0007,
  CASS_CONSISTENCY_SERIAL       = 0x0008,
  CASS_CONSISTENCY_LOCAL_SERIAL = 0x0009,
  CASS_CONSISTENCY_LOCAL_ONE    = 0x000A
} CassConsistency;
typedef enum CassWriteType_ {
  CASS_WRITE_TYPE_UKNOWN,
  CASS_WRITE_TYPE_SIMPLE,
  CASS_WRITE_TYPE_BATCH,
  CASS_WRITE_TYPE_UNLOGGED_BATCH,
  CASS_WRITE_TYPE_COUNTER,
  CASS_WRITE_TYPE_BATCH_LOG,
  CASS_WRITE_TYPE_CAS
} CassWriteType;
typedef enum CassValueType_ {
  CASS_VALUE_TYPE_UNKNOWN   = 0xFFFF,
  CASS_VALUE_TYPE_CUSTOM    = 0x0000,
  CASS_VALUE_TYPE_ASCII     = 0x0001,
  CASS_VALUE_TYPE_BIGINT    = 0x0002,
  CASS_VALUE_TYPE_BLOB      = 0x0003,
  CASS_VALUE_TYPE_BOOLEAN   = 0x0004,
  CASS_VALUE_TYPE_COUNTER   = 0x0005,
  CASS_VALUE_TYPE_DECIMAL   = 0x0006,
  CASS_VALUE_TYPE_DOUBLE    = 0x0007,
  CASS_VALUE_TYPE_FLOAT     = 0x0008,
  CASS_VALUE_TYPE_INT       = 0x0009,
  CASS_VALUE_TYPE_TEXT      = 0x000A,
  CASS_VALUE_TYPE_TIMESTAMP = 0x000B,
  CASS_VALUE_TYPE_UUID      = 0x000C,
  CASS_VALUE_TYPE_VARCHAR   = 0x000D,
  CASS_VALUE_TYPE_VARINT    = 0x000E,
  CASS_VALUE_TYPE_TIMEUUID  = 0x000F,
  CASS_VALUE_TYPE_INET      = 0x0010,
  CASS_VALUE_TYPE_DATE      = 0x0011,
  CASS_VALUE_TYPE_TIME      = 0x0012,
  CASS_VALUE_TYPE_SMALL_INT = 0x0013,
  CASS_VALUE_TYPE_TINY_INT  = 0x0014,
  CASS_VALUE_TYPE_LIST      = 0x0020,
  CASS_VALUE_TYPE_MAP       = 0x0021,
  CASS_VALUE_TYPE_SET       = 0x0022,
  CASS_VALUE_TYPE_UDT       = 0x0030,
  CASS_VALUE_TYPE_TUPLE     = 0x0031,
  CASS_VALUE_TYPE_LAST_ENTRY
} CassValueType;
typedef enum CassIteratorType_ {
  CASS_ITERATOR_TYPE_RESULT,
  CASS_ITERATOR_TYPE_ROW,
  CASS_ITERATOR_TYPE_COLLECTION,
  CASS_ITERATOR_TYPE_MAP,
  CASS_ITERATOR_TYPE_TUPLE,
  CASS_ITERATOR_TYPE_USER_TYPE_FIELD,
  CASS_ITERATOR_TYPE_META_FIELD,
  CASS_ITERATOR_TYPE_KEYSPACE_META,
  CASS_ITERATOR_TYPE_TABLE_META,
  CASS_ITERATOR_TYPE_TYPE_META,
  CASS_ITERATOR_TYPE_FUNCTION_META,
  CASS_ITERATOR_TYPE_AGGREGATE_META,
  CASS_ITERATOR_TYPE_COLUMN_META,
  CASS_ITERATOR_TYPE_INDEX_META,
  CASS_ITERATOR_TYPE_MATERIALIZED_VIEW_META
} CassIteratorType;
typedef enum CassLogLevel_ {
#define XX_LOG(log_level, _) log_level,
  CASS_LOG_LEVEL_MAP(XX_LOG)
#undef XX_LOG
  CASS_LOG_LAST_ENTRY
} CassLogLevel;
typedef enum CassError_ {
  CASS_OK = 0,
#define XX_ERROR(source, name, code, _) name = CASS_ERROR(source, code),
  CASS_ERROR_MAP(XX_ERROR)
#undef XX_ERROR
  CASS_ERROR_LAST_ENTRY
} CassError;
CASS_EXPORT CassError
cass_user_type_set_string_by_name(CassUserType* user_type,
                                 const char* name,
                                 const char* value);
CASS_EXPORT CassError
cass_user_type_set_string_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   const char* value,
                                   size_t value_length);
CASS_EXPORT CassError
cass_user_type_set_bytes(CassUserType* user_type,
                         size_t index,
                         const cass_byte_t* value,
                         size_t value_size);
CASS_EXPORT CassError
cass_user_type_set_bytes_by_name(CassUserType* user_type,
                                 const char* name,
                                 const cass_byte_t* value,
                                 size_t value_size);
CASS_EXPORT CassError
cass_user_type_set_bytes_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   const cass_byte_t* value,
                                   size_t value_size);
CASS_EXPORT CassError
cass_user_type_set_uuid(CassUserType* user_type,
                         size_t index,
                         CassUuid value);
CASS_EXPORT CassError
cass_user_type_set_uuid_by_name(CassUserType* user_type,
                                 const char* name,
                                 CassUuid value);
CASS_EXPORT CassError
cass_user_type_set_uuid_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   CassUuid value);
CASS_EXPORT CassError
cass_user_type_set_inet(CassUserType* user_type,
                         size_t index,
                         CassInet value);
CASS_EXPORT CassError
cass_user_type_set_inet_by_name(CassUserType* user_type,
                                 const char* name,
                                 CassInet value);
CASS_EXPORT CassError
cass_user_type_set_inet_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   CassInet value);
CASS_EXPORT CassError
cass_user_type_set_decimal(CassUserType* user_type,
                           size_t index,
                           const cass_byte_t* varint,
                           size_t varint_size,
                           int scale);
CASS_EXPORT CassError
cass_user_type_set_decimal_by_name(CassUserType* user_type,
                                   const char* name,
                                   const cass_byte_t* varint,
                                   size_t varint_size,
                                   int scale);
CASS_EXPORT CassError
cass_user_type_set_decimal_by_name_n(CassUserType* user_type,
                                     const char* name,
                                     size_t name_length,
                                     const cass_byte_t* varint,
                                     size_t varint_size,
                                     int scale);
CASS_EXPORT CassError
cass_user_type_set_collection(CassUserType* user_type,
                              size_t index,
                              const CassCollection* value);
CASS_EXPORT CassError
cass_user_type_set_collection_by_name(CassUserType* user_type,
                                      const char* name,
                                      const CassCollection* value);
CASS_EXPORT CassError
cass_user_type_set_collection_by_name_n(CassUserType* user_type,
                                        const char* name,
                                        size_t name_length,
                                        const CassCollection* value);
CASS_EXPORT CassError
cass_user_type_set_tuple(CassUserType* user_type,
                              size_t index,
                              const CassTuple* value);
CASS_EXPORT CassError
cass_user_type_set_tuple_by_name(CassUserType* user_type,
                                      const char* name,
                                      const CassTuple* value);
CASS_EXPORT CassError
cass_user_type_set_tuple_by_name_n(CassUserType* user_type,
                                        const char* name,
                                        size_t name_length,
                                        const CassTuple* value);
CASS_EXPORT CassError
cass_user_type_set_user_type(CassUserType* user_type,
                             size_t index,
                             const CassUserType* value);
CASS_EXPORT CassError
cass_user_type_set_user_type_by_name(CassUserType* user_type,
                                     const char* name,
                                     const CassUserType* value);
CASS_EXPORT CassError
cass_user_type_set_user_type_by_name_n(CassUserType* user_type,
                                       const char* name,
                                       size_t name_length,
                                       const CassUserType* value);
CASS_EXPORT void
cass_result_free(const CassResult* result);
CASS_EXPORT size_t
cass_result_row_count(const CassResult* result);
CASS_EXPORT size_t
cass_result_column_count(const CassResult* result);
CASS_EXPORT CassError
cass_result_column_name(const CassResult *result,
                        size_t index,
                        const char** name,
                        size_t* name_length);
CASS_EXPORT CassValueType
cass_result_column_type(const CassResult* result,
                        size_t index);
CASS_EXPORT const CassDataType*
cass_result_column_data_type(const CassResult* result, size_t index);
CASS_EXPORT const CassRow*
cass_result_first_row(const CassResult* result);
CASS_EXPORT cass_bool_t
cass_result_has_more_pages(const CassResult* result);
CASS_EXPORT CassError
cass_result_paging_state_token(const CassResult* result,
                               const char** paging_state,
                               size_t* paging_state_size);
CASS_EXPORT void
cass_error_result_free(const CassErrorResult* error_result);
CASS_EXPORT CassError
cass_error_result_code(const CassErrorResult* error_result);
CASS_EXPORT CassConsistency
cass_error_result_consistency(const CassErrorResult* error_result);
CASS_EXPORT cass_int32_t
cass_error_result_responses_received(const CassErrorResult* error_result);
CASS_EXPORT cass_int32_t
cass_error_result_responses_required(const CassErrorResult* error_result);
CASS_EXPORT cass_bool_t
cass_error_result_data_present(const CassErrorResult* error_result);
CASS_EXPORT CassWriteType
cass_error_result_write_type(const CassErrorResult* error_result);
CASS_EXPORT void
cass_iterator_free(CassIterator* iterator);
CASS_EXPORT CassIteratorType
cass_iterator_type(CassIterator* iterator);
CASS_EXPORT CassIterator*
cass_iterator_from_result(const CassResult* result);
CASS_EXPORT CassIterator*
cass_iterator_from_row(const CassRow* row);
CASS_EXPORT CassIterator*
cass_iterator_from_collection(const CassValue* value);
CASS_EXPORT CassIterator*
cass_iterator_from_map(const CassValue* value);
CASS_EXPORT CassIterator*
cass_iterator_from_tuple(const CassValue* value);
CASS_EXPORT cass_bool_t
cass_iterator_next(CassIterator* iterator);
CASS_EXPORT const CassRow*
cass_iterator_get_row(const CassIterator* iterator);
CASS_EXPORT const CassValue*
cass_iterator_get_column(const CassIterator* iterator);
CASS_EXPORT const CassValue*
cass_iterator_get_value(const CassIterator* iterator);
CASS_EXPORT const CassValue*
cass_iterator_get_map_key(const CassIterator* iterator);
CASS_EXPORT const CassValue*
cass_iterator_get_map_value(const CassIterator* iterator);
CASS_EXPORT CassError
cass_iterator_get_user_type_field_name(const CassIterator* iterator,
                                       const char** name,
                                       size_t* name_length);
CASS_EXPORT const CassValue*
cass_iterator_get_user_type_field_value(const CassIterator* iterator);
CASS_EXPORT const CassValue*
cass_row_get_column(const CassRow* row,
                    size_t index);
CASS_EXPORT const CassValue*
cass_row_get_column_by_name(const CassRow* row,
                            const char* name);
CASS_EXPORT const CassValue*
cass_row_get_column_by_name_n(const CassRow* row,
                              const char* name,
                              size_t name_length);
CASS_EXPORT const CassDataType*
cass_value_data_type(const CassValue* value);
CASS_EXPORT CassError
cass_value_get_int32(const CassValue* value,
                     cass_int32_t* output);
CASS_EXPORT CassError
cass_value_get_int64(const CassValue* value,
                     cass_int64_t* output);
CASS_EXPORT CassError
cass_value_get_float(const CassValue* value,
                     cass_float_t* output);
CASS_EXPORT CassError
cass_value_get_double(const CassValue* value,
                      cass_double_t* output);
CASS_EXPORT CassError
cass_value_get_bool(const CassValue* value,
                    cass_bool_t* output);
CASS_EXPORT CassError
cass_value_get_uuid(const CassValue* value,
                    CassUuid* output);