src/cassandra.rs

    pub fn cass_user_type_set_string_by_name(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             value: *const ::libc::c_char)
     -> CassError;
    pub fn cass_user_type_set_string_by_name_n(user_type: *mut CassUserType,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: *const ::libc::c_char,
                                               value_length: size_t)
     -> CassError;
    pub fn cass_user_type_set_bytes(user_type: *mut CassUserType,
                                    index: size_t, value: *const cass_byte_t,
                                    value_size: size_t) -> CassError;
    pub fn cass_user_type_set_bytes_by_name(user_type: *mut CassUserType,
                                            name: *const ::libc::c_char,
                                            value: *const cass_byte_t,
                                            value_size: size_t) -> CassError;
    pub fn cass_user_type_set_bytes_by_name_n(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: *const cass_byte_t,
                                              value_size: size_t)
     -> CassError;
    pub fn cass_user_type_set_uuid(user_type: *mut CassUserType,
                                   index: size_t, value: CassUuid)
     -> CassError;
    pub fn cass_user_type_set_uuid_by_name(user_type: *mut CassUserType,
                                           name: *const ::libc::c_char,
                                           value: CassUuid) -> CassError;
    pub fn cass_user_type_set_uuid_by_name_n(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             name_length: size_t,
                                             value: CassUuid) -> CassError;
    pub fn cass_user_type_set_inet(user_type: *mut CassUserType,
                                   index: size_t, value: CassInet)
     -> CassError;
    pub fn cass_user_type_set_inet_by_name(user_type: *mut CassUserType,
                                           name: *const ::libc::c_char,
                                           value: CassInet) -> CassError;
    pub fn cass_user_type_set_inet_by_name_n(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             name_length: size_t,
                                             value: CassInet) -> CassError;
    pub fn cass_user_type_set_decimal(user_type: *mut CassUserType,
                                      index: size_t,
                                      varint: *const cass_byte_t,
                                      varint_size: size_t,
                                      scale: ::libc::c_int) -> CassError;
    pub fn cass_user_type_set_decimal_by_name(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              varint: *const cass_byte_t,
                                              varint_size: size_t,
                                              scale: ::libc::c_int)
     -> CassError;
    pub fn cass_user_type_set_decimal_by_name_n(user_type: *mut CassUserType,
                                                name: *const ::libc::c_char,
                                                name_length: size_t,
                                                varint: *const cass_byte_t,
                                                varint_size: size_t,
                                                scale: ::libc::c_int)
     -> CassError;
    pub fn cass_user_type_set_collection(user_type: *mut CassUserType,
                                         index: size_t,
                                         value: *const CassCollection)
     -> CassError;
    pub fn cass_user_type_set_collection_by_name(user_type: *mut CassUserType,
                                                 name: *const ::libc::c_char,
                                                 value: *const CassCollection)
     -> CassError;
    pub fn cass_user_type_set_collection_by_name_n(user_type:
                                                       *mut CassUserType,
                                                   name:
                                                       *const ::libc::c_char,
                                                   name_length: size_t,
                                                   value:
                                                       *const CassCollection)
     -> CassError;
    pub fn cass_user_type_set_tuple(user_type: *mut CassUserType,
                                    index: size_t, value: *const CassTuple)
     -> CassError;
    pub fn cass_user_type_set_tuple_by_name(user_type: *mut CassUserType,
                                            name: *const ::libc::c_char,
                                            value: *const CassTuple)
     -> CassError;
    pub fn cass_user_type_set_tuple_by_name_n(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: *const CassTuple)
     -> CassError;
    pub fn cass_user_type_set_user_type(user_type: *mut CassUserType,
                                        index: size_t,
                                        value: *const CassUserType)
     -> CassError;
    pub fn cass_user_type_set_user_type_by_name(user_type: *mut CassUserType,
                                                name: *const ::libc::c_char,
                                                value: *const CassUserType)
     -> CassError;
    pub fn cass_user_type_set_user_type_by_name_n(user_type:
                                                      *mut CassUserType,
                                                  name: *const ::libc::c_char,
                                                  name_length: size_t,
                                                  value: *const CassUserType)
     -> CassError;
    pub fn cass_result_free(result: *const CassResult) -> ();
    pub fn cass_result_row_count(result: *const CassResult) -> size_t;
    pub fn cass_result_column_count(result: *const CassResult) -> size_t;
    pub fn cass_result_column_name(result: *const CassResult, index: size_t,
                                   name: *mut *const ::libc::c_char,
                                   name_length: *mut size_t) -> CassError;
    pub fn cass_result_column_type(result: *const CassResult, index: size_t)
     -> CassValueType;
    pub fn cass_result_column_data_type(result: *const CassResult,
                                        index: size_t) -> *const CassDataType;
    pub fn cass_result_first_row(result: *const CassResult) -> *const CassRow;
    pub fn cass_result_has_more_pages(result: *const CassResult)
     -> cass_bool_t;
    pub fn cass_result_paging_state_token(result: *const CassResult,
                                          paging_state:
                                              *mut *const ::libc::c_char,
                                          paging_state_size: *mut size_t)
     -> CassError;
    pub fn cass_error_result_free(error_result: *const CassErrorResult) -> ();
    pub fn cass_error_result_code(error_result: *const CassErrorResult)
     -> CassError;
    pub fn cass_error_result_consistency(error_result: *const CassErrorResult)
     -> CassConsistency;
    pub fn cass_error_result_responses_received(error_result:
                                                    *const CassErrorResult)
     -> cass_int32_t;
    pub fn cass_error_result_responses_required(error_result:
                                                    *const CassErrorResult)
     -> cass_int32_t;
    pub fn cass_error_result_data_present(error_result:
                                              *const CassErrorResult)
     -> cass_bool_t;
    pub fn cass_error_result_write_type(error_result: *const CassErrorResult)
     -> CassWriteType;
    pub fn cass_iterator_free(iterator: *mut CassIterator) -> ();
    pub fn cass_iterator_type(iterator: *mut CassIterator)
     -> CassIteratorType;
    pub fn cass_iterator_from_result(result: *const CassResult)
     -> *mut CassIterator;
    pub fn cass_iterator_from_row(row: *const CassRow) -> *mut CassIterator;
    pub fn cass_iterator_from_collection(value: *const CassValue)
     -> *mut CassIterator;
    pub fn cass_iterator_from_map(value: *const CassValue)
     -> *mut CassIterator;
    pub fn cass_iterator_from_tuple(value: *const CassValue)
     -> *mut CassIterator;
    pub fn cass_iterator_from_user_type(value: *const CassValue)
     -> *mut CassIterator;
    pub fn cass_iterator_from_schema(schema: *const CassSchema)
     -> *mut CassIterator;
    pub fn cass_iterator_from_schema_meta(meta: *const CassSchemaMeta)
     -> *mut CassIterator;
    pub fn cass_iterator_fields_from_schema_meta(meta: *const CassSchemaMeta)
     -> *mut CassIterator;
    pub fn cass_iterator_next(iterator: *mut CassIterator) -> cass_bool_t;
    pub fn cass_iterator_get_row(iterator: *mut CassIterator)
     -> *const CassRow;
    pub fn cass_iterator_get_column(iterator: *mut CassIterator)
     -> *const CassValue;
    pub fn cass_iterator_get_value(iterator: *mut CassIterator)
     -> *const CassValue;
    pub fn cass_iterator_get_map_key(iterator: *mut CassIterator)
     -> *const CassValue;
    pub fn cass_iterator_get_map_value(iterator: *mut CassIterator)
     -> *const CassValue;
    pub fn cass_iterator_get_user_type_field_name(iterator: *mut CassIterator,
                                                  name:
                                                      *mut *const ::libc::c_char,
                                                  name_length: *mut size_t)
     -> CassError;
    pub fn cass_iterator_get_user_type_field_value(iterator:
                                                       *mut CassIterator)
     -> *const CassValue;
    pub fn cass_iterator_get_schema_meta(iterator: *mut CassIterator)
     -> *const CassSchemaMeta;
    pub fn cass_iterator_get_schema_meta_field(iterator: *mut CassIterator)
     -> *const CassSchemaMetaField;
    pub fn cass_row_get_column(row: *const CassRow, index: size_t)
     -> *const CassValue;
    pub fn cass_row_get_column_by_name(row: *const CassRow,
                                       name: *const ::libc::c_char)
     -> *const CassValue;
    pub fn cass_row_get_column_by_name_n(row: *const CassRow,
                                         name: *const ::libc::c_char,
                                         name_length: size_t)
     -> *const CassValue;
    pub fn cass_value_data_type(value: *const CassValue)
     -> *const CassDataType;
    pub fn cass_value_get_int32(value: *const CassValue,
                                output: *mut cass_int32_t) -> CassError;
    pub fn cass_value_get_int64(value: *const CassValue,
                                output: *mut cass_int64_t) -> CassError;
    pub fn cass_value_get_float(value: *const CassValue,
                                output: *mut cass_float_t) -> CassError;
    pub fn cass_value_get_double(value: *const CassValue,
                                 output: *mut cass_double_t) -> CassError;
    pub fn cass_value_get_bool(value: *const CassValue,
                               output: *mut cass_bool_t) -> CassError;
    pub fn cass_value_get_uuid(value: *const CassValue, output: *mut CassUuid)
     -> CassError;
